# Optimization

./: CMakeLists.txt  LICENSE
.github/workflows/: main.yml
prayers_to_the_Omnissiah/: --_-.txt  __--__.txt
src/: CMakeLists.txt  discrepancy.cpp  discrepancy.h  search.cpp  search.h
tests/: CMakeLists.txt  test_discrepancy.cpp  test_search.cpp
